<resources>
    <string name="app_name">JCNetwork Days</string>
    <string name="dein_lebenslauf">Dein Lebenslauf</string>
    <string name="defaultqrcodeimg">DefaultQRCodeImg</string>
    <string name="hallo">Hallo</string>
    <string name="dein_name">Dein Name</string>
    <string name="zu_den">Zu den</string>
    <string name="check_in">Check-In</string>
    <string name="ablaufplan">Ablaufplan</string>
    <string name="punkte">Punkte</string>
    <string name="stadt">Stadt</string>
    <string name="profile_button">profile button</string>
    <string name="city_button">city button</string>
    <string name="points_button">points button</string>
    <string name="schedule_button">schedule button</string>
    <string name="check_in_button">check in button</string>
    <string name="profil">Profil</string>
    <string name="club_button">club button</string>
    <string name="club">Club</string>
    <string name="logo_image">logo image</string>
    <string name="arrow_image">arrow image</string>
    <string name="copyrights_text">Copyrights Text</string>
    <string name="ablaufplan_caution_text">Der hier angezeigte Ablaufplan ist vorläufig und unterliegt Änderungen. Sobald der finale Ablaufplan feststeht, kannst du ihn hier einsehen.</string>
    <string name="title_activity_settings">Einstellungen</string>
        <string name="design">Design</string>
        <string name="notifications">Benachrichtigungen</string>
        <string name="modus">Modus</string>
        <string name="workshop_title">Workshop Anmeldung</string>
        <string name="workshop_summary_on">Empfange Benachrichtigung wenn Anmeldung für Workshops öffnet </string>
        <string name="workshop_summary_off">Keine Benachrichtungen für Workshops empfangen</string>
        <string name="days_title">Event Anmeldung</string>
        <string name="days_summary_on">Empfange Benachrichtigung wenn Anmeldung für die Events e.g. JCNetwork Days öffnet </string>
        <string name="days_summary_off">Keine Benachrichtungen für die Events empfangen</string>
    <string name="channel_description">Notification Channel for JCNetwork e.V. App</string>
    <string name="channel_name">Notification Channel</string>
    <string name="content_description_closed_drawer">closed Drawer</string>
    <string name="content_description_opened_drawer">opened Drawer</string>
    <string name="jobwall">Jobwall</string>
    <string name="junior_consultant_network_jcnetwork_e_v">Junior Consultant Network (JCNetwork) e.V.</string>
    <string name="waldhornstr_27_n_76131_karlsruhe">Waldhornstr. 27 \n 76131 Karlsruhe</string>
    <string name="telephone_number">Tel.: 03677 87492 10</string>
    <string name="contact_email">E-Mail: kontakt@JCNetwork.de</string>
    <string name="ust_id">USt-ID: DE310219240</string>
    <string name="handelsregistereintragung">Registereintragung: Amtsgericht Arnstadt, Zweigstelle Ilmenau, VR 120620</string>
    <string name="anmelden">Anmelden</string>
    <string name="ablaufsplan">Ablaufsplan</string>
    <string name="default_notification_channel_id">GENERAL_FIREBASE_NOTIFICATION_ID</string>
    <string name="default_notification_channel_name">FCM Notification Channel</string>
    <string name="qr_instructions">Bitte zeigen diesen QR-Code beim Check-In vor.</string>
    <string name="portale">Portale</string>
    <string name="credits">© Layla Rohkohl</string>
    <string name="login">Login</string>
    <string name="registrieren">Registrieren</string>
    <string name="brainteaser">Brainteaser</string>
    <string name="unternehmen">Partner</string>
    <string name="mitmachen">Mitmachen</string>
    <string name="sample_brainteaser_question">Sample brainteaser question</string>
    <string name="just_decoration_for_brainteaser_question">Just decoration for brainteaser question</string>
    <string name="frage">Frage</string>
    <string name="portalverlinkungsknopf">Portalverlinkungsknopf</string>
    <string name="neu">Neu</string>
    <string name="mischen">Mischen</string>
    <string name="locked_icon_for_no_data_found">Locked icon for no data found</string>
    <string name="fix_no_data_instructions_for_plan_activity">Keine Daten wurden gefunden. Eventuell wurden die Daten auf einem anderen Account (Verein vs. JCNetwork Account) abgespeichert. Sollte das so sein, bitte logge dich aus und danach erneut mit deinem anderen Account wieder ein. Sollte das Problem nicht behoben sein, setze uns bitte davon in Kenntnis per Mail.</string>
    <string name="junior_consultants_discussing_around_a_table">Junior Consultants discussing around a table</string>
    <string name="icon_for_vorstandsvorsitz">Icon for Vorstandsvorsitz</string>
    <string name="icon_for_customer_relations">Icon for customer relations</string>
    <string name="icon_for_finanzen_und_recht">Icon for Finanzen und Recht</string>
    <string name="icon_for_informationsmanagement">Icon for Informationsmanagement</string>
    <string name="icon_for_marketing">Icon for Marketing</string>
    <string name="icon_for_eventmanagement">Icon for Eventmanagement</string>
    <string name="icon_for_human_resources">Icon for Human Resources</string>
    <string name="icon_for_weiterbildung">Icon for Weiterbildung</string>
    <string name="icon">Icon</string>
    <string name="jcnetwork_days_logo">JCNetwork Days Logo</string>
    <string name="jcnetwork_executive_days_logo">JCNetwork Executive Days Logo</string>
    <string name="jcnetwork_development_days_logo">JCNetwork Development Days Logo</string>
    <string name="days_register_instruction_tv">Für welches Event möchtest Du dich anmelden? Einfach draufklicken und schon kommst du zur Anmeldeseite.</string>
    <string name="trainer_academy">Trainer Academy</string>
    <string name="alumni">Alumni</string>
    <string name="alumni_description">Fertig mit dem Studium? Bleibe als Alumni Teil des JCNetwork.</string>
    <string name="portale_description">Lasse dich zu einem JCNetwork Trainer ausbilden in diesem Semester!</string>
    <string name="jobwall_description">Finde die aktuellen Stellenausschreibungen unserer Partnerunternehmen auf einem Blick.</string>
    <string name="zertifizierungsportal">Zertifizierungsportal</string>
    <string name="zertifizierungsportal_description">Fahrplan zur JCNetwork Junior Zertifizierung vergessen? Kein Problem. Hier kannst du es nachlesen.</string>
    <string name="blog">Blog</string>
    <string name="blog_description">Das neuste Wissen der JCNetwork Junior Consultants auf einem Platz.</string>
    <string name="jcnetwork_projektmanagement_ug">JCNetwork Projektmanagement UG</string>
    <string name="projektmgmt_ug_description">Etwas Praxis gefällig? Zeit, Projekte gemeinsam und rechtlich abgesichert anzupacken.</string>
    <string name="dummy_programmpunkt_titel">Programmpunkt</string>
    <string name="icon_for_ort">Icon for Ort</string>
    <string name="ort">Ort</string>
    <string name="zeit">Zeit</string>
    <string name="description_of_the_event">Description of the event</string>
    <string name="weiterbildung">Weiterbildung</string>
    <string name="human_resources">Human Resources</string>
    <string name="eventmanagement">Eventmanagement</string>
    <string name="marketing">Marketing</string>
    <string name="informations_nmanagement">Informations-\nmanagement</string>
    <string name="finanzen_amp_recht"><![CDATA[Finanzen & Recht]]></string>
    <string name="customer_relations">Customer Relations</string>
    <string name="vorstandsvorsitz">Vorstandsvorsitz</string>
    <string name="sample_question_n_super_long_n_question">Sample question \n super long \n question</string>
    <string name="sample_answer">Sample answer</string>
    <string name="logo_des_partners">Logo des Partners</string>
    <string name="description_of_a_company">Description of a company</string>
    <string name="close">Close</string>
    <string name="jcnetwork_logo">JCNetwork Logo</string>
    <string name="no_internet_text">Keine Internetverbindung gefunden. Bitte überprüfe deine Verbindung und probiere es erneut.</string>
    <string name="erneut_versuchen">Erneut Versuchen</string>
    <string name="dummy_title">Dummy title</string>
    <string name="dummy_place">Dummy Place</string>
    <string name="dummy_time">Dummy Time</string>
    <string name="send_email_to_ask_new_question">Send email to ask new question</string>
    <string name="search">Suchen</string>
    <string name="punktestand">Punktestand</string>
    <string name="mein_qr">Mein QR</string>
    <string name="lebenslauf_bearbeiten"><u>Lebenslauf bearbeiten</u></string>
    <string name="link_zu_internen_workshops"><u>Link zu internen Workshops</u></string>
    <string name="link_zu_externen_workshops"><u>Link zu externen Workshops</u></string>
    <string name="google_maps_zu_magdeburg"><u>Google Maps zu Magdeburg</u></string>
    <string name="link_zum_workshop_feedback_formular"><u>Link zum Workshop Feedback Formular</u></string>
    <string name="link_ablaufsplan"><u>Ablaufsplan</u></string>
    <string name="ber_den_verein"><u>Über den Verein</u></string>
    <string name="ber_magdeburg"><u>Über Magdeburg</u></string>
    <string name="link_zur_jcnetwork_executive_days_anmeldung"><u>Link zur JCNetwork Executive Days Anmeldung</u></string>
    <string name="link_zur_jcnetwork_development_days_anmeldung"><u>Link zur JCNetwork Development Days Anmeldung</u></string>
    <string name="link_zur_jcnetwork_days_anmeldung"><u>Link zur JCNetwork Days Anmeldung</u></string>
    <string name="link_zum_vereinswettbewerb"><u>Link zum Vereinswettbewerb</u></string>
    <string name="city_name">Magdeburg</string>
    <string name="city_description">„Von so weit her bis hier hin – von hier aus noch viel weiter“\n\n

Dieses Motto prägt nicht nur eine besondere Brücke, sondern unsere gesamte, facettenreiche Stadt an der Elbe. Weg von Vergangenem hin zum Hier und Jetzt – dieser Wandel lässt sich in Magdeburg an vielen Ecken entdecken. Man lässt los von alten Mustern, aus Alt macht Neu. Mit der Förderung der Start-Up Szene und Niederlassungen großer internationaler Technologiekonzerne bietet sich Studierenden und Besuchenden ein attraktives Stadtbild.\n\n

Die Otto-von-Guericke Universität und die Hochschule Magdeburg-Stendal bieten mehr als 18.000 Studierenden und Forschenden aus aller Welt die Möglichkeit in einem internationalen Umfeld zu aktuellen wissenschaftlichen und gesellschaftlichen Themen zu forschen. Mit den diversen Fachrichtungen, angegliederten Wissenschaftseinrichtungen und zahlreichen studentischen Initiativen verleiht der Campus unserer Stadt einen ganz besonderen, innovativen Flair. Unsere Vereinsarbeit bei SIDUM e.V. profitiert von dieser Entwicklung ganz besonders und wir sind stolz, ein Teil dieses Umfelds zu sein.\n\n

Die Geschichte der Stadt ist abwechslungsreich und führt von Kaiser Otto I bis hin zu dem bekannten Wissenschaftler und Namensgeber der Universität– Otto von Guericke. Die Straßenfassaden sind allgegenwärtige Zeitzeugen einer bewegten 1200 jährigen Geschichte, welche bis in unsere heutige Zeit hineinreicht. Der 500 Jahre alte Dom, Straßenzüge mit Gründerzeitbauten, preisgekrönten DDR-Fassaden bis hin zum bunten Hundertwasserhaus – hier gibt es an jeder Ecke etwas zu entdecken. Die Attraktivität der Stadt wird durch die Nähe zur Elbe und den städtischen Parks untermauert. So verfügt Magdeburg über zahlreiche Parkanlagen, welche sich quer über die Stadt verteilen. Diese sind das ganze Jahr über Treffpunkt für Jung und Alt, Sportler:innen und Sonnenanbetende sowie Lerngruppen und Tagträumer.\n\n

Gerne bringen wir euch den Charme unserer lebendigen Stadt ein bisschen näher und freuen uns ganz besonders in diesem Sommer Gastgeber für die JCNetwork Days in Magdeburg zu sein.\n\n

Wir freuen uns auf euch!\n</string>
    <string name="bild_des_ausrichters_bzw_der_stadt">Bild des Ausrichters bzw. der Stadt</string>
</resources>