<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginBottom="8dp" >

        <ImageView
            android:id="@+id/dialog_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/normal_days_logo"
            android:contentDescription="@string/bild_des_ausrichters_bzw_der_stadt" />

        <ImageButton
            android:id="@+id/dialog_close_btn"
            android:src="@drawable/ic_baseline_close_24"
            android:background="@color/transparent"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:layout_alignEnd="@id/dialog_img"
            android:layout_alignTop="@id/dialog_img"
            android:contentDescription="@string/close" />

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#80000000"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/city_name"
            android:textColor="#fff" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp">

    <TextView
        android:id="@+id/dialog_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/city_description"/>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>