<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/card_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="8dp">

    <FrameLayout
        android:id="@+id/frame"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--        <LinearLayout-->
<!--            android:orientation="horizontal"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->

<!--            <View-->
<!--                android:id="@+id/color_bar"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@color/colorPrimary"-->
<!--                android:layout_width="0dp"/>-->

<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                android:layout_margin="1dp"-->
<!--                android:background="@color/white"-->
<!--                android:layout_weight="20"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                xmlns:app="http://schemas.android.com/apk/res-auto">-->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_margin="1dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto">

                <View
                    android:id="@+id/color_bar"
                    android:transitionName="bar"
                    android:background="@color/colorPrimary"
                    android:layout_width="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_height="0dp" />

                <View
                    android:id="@+id/dividing_line"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/color_bar"
                    app:layout_constraintTop_toTopOf="parent"/>

                <!-- Title of event -->
                <TextView
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:id="@+id/title"
                    android:transitionName="title"
                    android:text="@string/dummy_title"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/dividing_line" />

                <!-- Place of event -->
                <ImageView
                    android:id="@+id/place_icon"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:layout_constraintStart_toEndOf="@id/dividing_line"
                    android:src="@drawable/ic_baseline_place_24"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/icon" />

                <TextView
                    android:transitionName="place"
                    android:id="@+id/place"
                    android:text="@string/dummy_place"
                    android:paddingStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/place_icon"
                    app:layout_constraintLeft_toRightOf="@id/place_icon"
                    app:layout_constraintBottom_toBottomOf="@id/place_icon"/>

                <!-- Time of event -->
                <ImageView
                    android:id="@+id/time_icon"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@id/place"
                    app:layout_constraintStart_toEndOf="@id/dividing_line"
                    android:src="@drawable/ic_baseline_access_time_24"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/icon" />

                <TextView
                    android:transitionName="time"
                    android:id="@+id/time"
                    android:text="@string/dummy_time"
                    android:paddingStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/time_icon"
                    app:layout_constraintLeft_toRightOf="@id/time_icon"
                    app:layout_constraintBottom_toBottomOf="@id/time_icon"/>

                <!-- Empty view to add some spacing between time and outline -->
                <View
                    android:id="@+id/extra_spacer"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    app:layout_constraintTop_toBottomOf="@id/time"/>

                <!-- Quick go button to event -->
                <ImageView
                    android:transitionName="map"
                    android:id="@+id/go_arrow"
                    android:src="@drawable/ic_baseline_map_24"
                    android:layout_marginEnd="8dp"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/icon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

<!--        </LinearLayout>-->
    </FrameLayout>
</androidx.cardview.widget.CardView>